--- a/file16/app.css
+++ b/file16/app.css
@@ -24,3 +24,12 @@ body{
 #mainnavbar .nav-link{
     color: white;
 }
+
+#museumofcandy span{
+    color: #ea1c2c;
+}
+
+#museumofcandy h1{
+    font-weight: 100;
+    font-size: 3rem;
+}
